--- a/html/slider.html
+++ b/html/slider.html
@@ -23,20 +23,22 @@
                 <img src="../img/15.png" alt="">
             </div>
         </div>
-            <button class="button slide-prev" id="button_two">Вперёд</button>
-            <button class="button slide-next" id="button_three">Назад</button>
-        <div class="dots-block">
-            <div class="dots-item active"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-            <div class="dots-item"></div>
-        </div>
+            <div class="sliders_block">
+            <button class="button slide-prev" id="button_two">Вперёд</button>               
+                <div class="dots-block">
+                    <div class="dots-item active"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                    <div class="dots-item"></div>
+                </div> 
+                <button class="button slide-next" id="button_three">Назад</button>     
+            </div>
     </section>
         <script src="../js/banner.js"></script>
         <script src="../js/slyder.js"></script>
