удаление лишних img и img-resize

--- a/html/slider.html
+++ b/html/slider.html
@@ -11,16 +11,15 @@
     <section class="section">
         <div class="slider">
             <div class="slider-line">
-                <img src="../img/5.png" alt="">
-                <img src="../img/6.png" alt="">
-                <img src="../img/7.png" alt="">
-                <img src="../img/8.png" alt="">
-                <img src="../img/9.png" alt="">
-                <img src="../img/10.png" alt="">
-                <img src="../img/12.png" alt="">
-                <img src="../img/13.png" alt="">
-                <img src="../img/14.png" alt="">
-                <img src="../img/15.png" alt="">
+                <img src="../img/1.jpg" alt="">
+                <img src="../img/2.jpg" alt="">
+                <img src="../img/3.jpg" alt="">
+                <img src="../img/4.jpg" alt="">
+                <img src="../img/5.jpg" alt="">
+                <img src="../img/6.jpg" alt="">
+                <img src="../img/7.jpg" alt="">
+                <img src="../img/8.jpg" alt="">
+                <img src="../img/9.jpg" alt="">
             </div>
         </div>
             <div class="sliders_block">
@@ -35,12 +34,10 @@
                     <div class="dots-item"></div>
                     <div class="dots-item"></div>
                     <div class="dots-item"></div>
-                    <div class="dots-item"></div>
-                </div> 
+                 </div> 
                 <button class="button slide-next" id="button_three">Назад</button>     
             </div>
     </section>
-        <script src="../js/banner.js"></script>
         <script src="../js/slyder.js"></script>
 </body>
 </html>
