--- a/slider.html
+++ b/slider.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/slider.css" type="text/css" rel="stylesheet" > 
+    <link href="./css/slider.css" type="text/css" rel="stylesheet" > 
     <title>Document</title>
 </head>
 <body>
     <section class="section">
         <div class="slider">
             <div class="slider-line">
-                <img src="../img/1.jpg" alt="">
-                <img src="../img/2.jpg" alt="">
-                <img src="../img/3.jpg" alt="">
-                <img src="../img/4.jpg" alt="">
-                <img src="../img/5.jpg" alt="">
-                <img src="../img/6.jpg" alt="">
-                <img src="../img/7.jpg" alt="">
-                <img src="../img/8.jpg" alt="">
-                <img src="../img/9.jpg" alt="">
+                <img src="./img/1.jpg" alt="">
+                <img src="./img/2.jpg" alt="">
+                <img src="./img/3.jpg" alt="">
+                <img src="./img/4.jpg" alt="">
+                <img src="./img/5.jpg" alt="">
+                <img src="./img/6.jpg" alt="">
+                <img src="./img/7.jpg" alt="">
+                <img src="./img/8.jpg" alt="">
+                <img src="./img/9.jpg" alt="">
             </div>
         </div>
             <div class="sliders_block">
@@ -38,6 +38,6 @@
                 <button class="button slide-next" id="button_three">Назад</button>     
             </div>
     </section>
-        <script src="../js/slyder.js"></script>
+        <script src="./js/slyder.js"></script>
 </body>
 </html>
